<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBF5FB"
    tools:context=".MainActivity">

    <!-- similar to above- inputPassword  -->


    <EditText
        android:id="@+id/inputMail"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="#0B3C63"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_topNews"
        app:layout_constraintVertical_bias="0.808" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="#0B3C63"
        android:textColorHint="#0B3C63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title_topNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/stay_connected"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0B3C63"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#A7D4E8"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="#0B3C63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpSignInButton"
        app:layout_constraintVertical_bias="0.982" />

    <Button
        android:id="@+id/signUpSignInButton"
        android:layout_width="136dp"
        android:layout_height="53dp"
        android:backgroundTint="#A7D4E8"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#0B3C63"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintVertical_bias="0.162" />


</androidx.constraintlayout.widget.ConstraintLayout>